Fix hotizontal overflow on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,12 @@ html {
 body {
   font-family: "Alegreya", serif;
 }
+html,
+body {
+  width: 100%;
+  position: relative;
+  overflow-x: hidden;
+}
 /* Media Query */
 .container {
   padding-left: 15px;
